--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "laraveldaily/laravel-charts": "^0.2.3",
         "livewire/livewire": "^3.0"
     },
     "require-dev": {
